--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
     },
     "target-dir": "Escape/WSSEAuthenticationBundle",
     "require": {
-        "php": ">=5.3.2"
+        "symfony/symfony": "2.1.*"
     }
 }
