--- a/Tests/autoload.php.dist
+++ b/Tests/autoload.php.dist
@@ -19,9 +19,9 @@ spl_autoload_register(function($class)
 {
     $class = ltrim($class, '\\');
 
-    if(0 === strpos($class, 'Escape\WSSEAuthenticationBundle\\'))
+    if(0 === strpos($class, 'Mopa\WSSEAuthenticationBundle\\'))
     {
-        $file = __DIR__.'/../'.str_replace('\\', '/', substr($class, strlen('Escape\WSSEAuthenticationBundle\\'))).'.php';
+        $file = __DIR__.'/../'.str_replace('\\', '/', substr($class, strlen('Mopa\WSSEAuthenticationBundle\\'))).'.php';
         if(file_exists($file))
         {
             require $file;
