mopastudios.co.uk > escapestudios.com
Hi,

please correct my homepage url -or- take me out altogether in the composer.json...

Thanks in advance!

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         },
         {
             "name": "David Joos",
-            "homepage": "http://www.mopastudios.co.uk/"
+            "homepage": "http://www.escapestudios.com/"
         },
         {
             "name": "Community contributions",
