--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "target-dir": "Mopa/Bundle/WSSEAuthenticationBundle",
     "require": {
-        "symfony/symfony": ">2.1.*"
+        "symfony/symfony": ">=2.1.*"
     },
     "repositories": [
         {
