--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
     },
     "target-dir": "Mopa/Bundle/WSSEAuthenticationBundle",
     "require": {
-        "symfony/symfony": ">=2.1.*"
+        "symfony/symfony": ">=2.1.0"
     }
 }
